# gh-analytics-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-dev.yml  pr-checks.yml
adf/dataset/: DS_GHArchive_Source.json  DS_Landing_Sink.json
adf/linkedService/: ADLS_Landing_LS.json  HTTP_GHArchive_LS.json
adf/pipeline/: pl_backfill_historical.json  pl_daily_optimization.json  pl_hourly_ingestion.json  pl_repo_metadata_refresh.json
adf/trigger/: tr_daily_optimization.json  tr_hourly.json  tr_repo_refresh.json
configs/: dev.yaml  prod.yaml
dashboards/: README.md
dashboards/databricks_sql/: gh_overview.lvdash.json  operational_queries.sql  views.sql
docs/: adf_pipeline_docs.md  architecture.md  data_dictionary.md  phased-plan.md  runbook.md
infra/databricks/: README.md  cluster-policy.json  setup_uc.sh
infra/terraform/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/terraform/bootstrap/: bootstrap-state.ps1
infra/terraform/environments/: dev.tfvars  prod.tfvars
infra/terraform/modules/adf/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/databricks/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/eventhub/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/keyvault/: main.tf  variables.tf
infra/terraform/modules/rbac/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
src/dq/: __init__.py  gx_runner.py  runner.py
src/dq/expectations/: suites.py
src/notebooks/: bronze_ingestion.py  delta_maintenance.py  dq_checks.py  fetch_repo_metadata.py  gold_aggregation.py  silver_transformation.py  streaming_ingestion.py
src/streaming/: __init__.py  eventhub_producer.py
src/transformations/: __init__.py  bronze.py  gold.py  scd2.py  silver.py
src/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/unit/: test_bronze.py  test_config.py  test_dq_runner.py  test_gold.py  test_gx_runner.py  test_logging.py  test_scd2.py  test_silver.py
